[gd_scene load_steps=4 format=3 uid="uid://1bheidqt2t0y"]

[ext_resource type="Script" path="res://Scenes/ProfilePanel/profile_panel.gd" id="1_wokcq"]
[ext_resource type="Texture2D" uid="uid://duht8dm23rra3" path="res://Art/trash-can.png" id="2_keq8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oydtk"]
bg_color = Color(1, 1, 1, 1)

[node name="ProfilePanel" type="Panel"]
self_modulate = Color(0.721569, 0.0666667, 0.0666667, 1)
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oydtk")
script = ExtResource("1_wokcq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ProfileName" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]This is a profile right?"
fit_content = true

[node name="TrashButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_keq8p")
icon_alignment = 1
expand_icon = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
